--- a/about.html
+++ b/about.html
@@ -1,6 +1,18 @@
 ---
 layout: page
-title: Page Title
-description: This is the page description.
-background: '/PATH_TO_IMAGE'
+title: About Me
+description: Who am I?.
+background: 'assets/img/bg-index.jpg'
 ---
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste
+    vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!
+</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate
+    explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore,
+    architecto id.</p>
+
+<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus
+    incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat
+    unde voluptatem! Itaque, eum!</p>
