feat: added seo

--- a/_posts/2023-12-07-how-to-be-a-good-programing-mentor.html
+++ b/_posts/2023-12-07-how-to-be-a-good-programing-mentor.html
@@ -1,9 +1,16 @@
 ---
 layout: post
 title: "How to be a good programming mentor"
+description: "Learn how to be a stellar programming mentor with our comprehensive guide. Discover valuable tips and
+techniques to
+effectively support and guide aspiring programmers on their journey. Enhance your mentoring skills in the world of
+coding while maintaining a professional tone throughout. Start empowering others today!"
 date: 2023-12-06 23:45:13 -0400
 background: '/assets/img/bg-index.jpg'
 tags: mentoring
+image:
+    path: '/assets/img/bg-index.jpg'
+    alt: Twitter Logo
 ---
 <!-- Preview image figure-->
 <figure class="mb-4" style="display: none"><img class="img-fluid rounded" src="" alt="..." />
